--- a/index.hTmL
+++ b/index.hTmL
@@ -4,6 +4,6 @@
     <meta http-equiv="refresh" content="0; url=https://http://127.0.0.1:9010" />
 </head>
 <body>
-    <p>正在跳转到主站点... <a href="http://127.0.0.1:9010">点击这里</a></p>
+    <p>...<a href="http://127.0.0.1:9010">点击这里</a></p>
 </body>
 </html>
