--- a/index.hTmL
+++ b/index.hTmL
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=https://http://127.0.0.1:9010" />
+    <meta http-equiv="refresh" content="0; url=https://192.168.101.6:9010" />
 </head>
 <body>
-    <p>...<a href="http://127.0.0.1:9010">点击这里</a></p>
+    <p>...<a href="http://192.168.101.6:9010">...</a></p>
 </body>
 </html>
+
